# sitg-api

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
notebook/: sitg-api.ipynb
src/sitg_api/: __init__.py  _arcgis.py  _logging.py  idc.py
src/sitg_api/_pbf/: __init__.py
tests/: test_arcgis.py  test_idc.py  test_unit_arcgis.py  test_unit_pbf.py
