[project]
name = "sitg-api"
version = "0.1.15"
description = "Client générique pour les APIs ArcGIS REST SITG"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dataframely>=2.9.1",
    "geopandas>=1.1.3",
    "httpx>=0.28.1",
    "loguru>=0.7.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.9",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "shapely>=2.1.2",
    "tabulate>=0.10.0",
    "tqdm>=4.67.3",
    "bump-my-version>=1.4.1",
    "pyright>=1.1.411",
    "bandit>=1.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sitg_api"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["notebook/"]   # notebooks use Python 3.12+ f-string syntax

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line too long — handled by formatter
]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["dataframely.rule"]

[tool.ruff.lint.isort]
known-first-party = ["sitg_api"]

[tool.uv]
link-mode = "copy"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = false
# Gradually enable these as you add type hints:
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false   # flip to true once all functions are annotated
ignore_missing_imports = true   # third-party libs without stubs (streamlit, pymongo…)
exclude = [
    "tests/",
    "mkdocs/",
]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
exclude = [
    "tests",
    "mkdocs",
    ".venv",
]
typeCheckingMode = "basic"   # tighten to "standard"/"strict" once typed up
reportMissingImports = true
reportMissingTypeStubs = false   # third-party libs without stubs (streamlit, pymongo…)
# Codebase has no type hints yet, so pandas/numpy's strict stubs are very noisy.
# Downgrade to warnings (gradual adoption, same approach as [tool.mypy] above);
# tighten to "error" once these are cleaned up.
reportAttributeAccessIssue = "warning"
reportReturnType = "warning"
reportCallIssue = "warning"
reportArgumentType = "warning"
reportOptionalSubscript = "warning"
reportAssignmentType = "warning"
reportGeneralTypeIssues = "warning"
reportOperatorIssue = "warning"

[tool.bandit]
exclude_dirs = ["tests", "mkdocs"]
skips = [
    "B101",  # assert statements — fine in tests/application code here
]
severity = "medium"   # report medium and high findings only

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.bumpversion]
current_version = "0.1.15"
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
regex = true
search = '^version = "{current_version}"'
replace = 'version = "{new_version}"'
