[project]
name = "sitg-api"
version = "0.1.23"
description = "Client générique pour les APIs ArcGIS REST SITG"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dataframely>=2.9.1",
    "httpx>=0.28.1",
    "loguru>=0.7.2",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sitg_api"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["notebook/"]   # notebooks use Python 3.12+ f-string syntax

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line too long — handled by formatter
]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["dataframely.rule"]

[tool.ruff.lint.isort]
known-first-party = ["sitg_api"]

[tool.uv]
link-mode = "copy"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: hits the live SITG ArcGIS API over the network (slow, requires internet).",
]

# [tool.mypy], [tool.pyright], and [tool.bandit] now live in standalone files
# (mypy.ini, ty.toml, bandit.toml) synced from the ci-templates repo — note
# this repo's pre-commit now runs ty instead of pyright, matching ty.toml.
# See ci-templates/README.md.

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "bump-my-version>=1.4.1",
    "pre-commit>=4.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "ty>=0.0.55",
    # Uniquement requis par notebook/sitg-api.ipynb (géométrie GeoPandas, export
    # to_markdown, widgets tqdm.auto) — pas utilisés par la librairie elle-même.
    "geopandas>=1.1.3",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "shapely>=2.1.2",
    "tabulate>=0.10.0",
]

[tool.bumpversion]
current_version = "0.1.23"
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
regex = true
search = '^version = "{current_version}"'
replace = 'version = "{new_version}"'
